re PR middle-end/21291 (can't find a register in class 'GENERAL_REGS' while reloading 'asm')

PR 21291
        * tree-outof-ssa.c (coalesce_asm_operands): New.
        (coalesce_ssa_name): Use it.  Split out ...
        (coalesce_phi_operands, coalesce_result_decls): ... these.

From-SVN: r102760